--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@ body {
   font-weight: 600;
 }
 
+.left a{
+  text-decoration: none;
+  color: white;
+}
+
 .left span {
   border-bottom: 1px solid white;
 }
