--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
   /* margin: auto; */
   width: 100%;
   pointer-events: none;
-  padding-top: 14rem;
+  padding-top: 15%;
 }
 
 .home-intro {
@@ -458,7 +458,7 @@ body {
 
 .proj-info {
   text-align: left;
-  width: 80%;
+  width: 100%;
   /* border: 1px solid red; */
   padding: 1rem;
   border-radius: 1rem;
@@ -511,10 +511,11 @@ body {
 
 .proj-info ul {
   text-align: left;
+  font-size: 0.9rem;
 }
 
 .proj-info ul li {
-  margin: 1rem;
+  margin: 0.1rem 0;
 }
 
 .proj-info p a {
@@ -543,7 +544,7 @@ body {
 .small-proj1 {
   text-align: center;
   width: 30%;
-  height: auto;
+  height: 70vh;
   /* border: 1px solid red; */
   border-radius: 6rem;
   background-color: black;
